k8s/manifests/service-b.yaml
# Cluster B 专用 Service（仅 nodePort 不同）
apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  type: NodePort
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30081      # ★ Cluster A 用 30080，B 用 30081
